# py-result

./: README.md  pyproject.toml  pyresult.py
.github/workflows/: docs.yml
